apt-clone (0.3.1~ubuntu12) UNRELEASED; urgency=medium

  * Add an option to replace the mirror used in /etc/apt/sources.list with one
    of your choosing. (LP: #1290584)

 -- Brian Murray <brian@ubuntu.com>  Tue, 11 Mar 2014 08:39:45 -0700

apt-clone (0.3.1~ubuntu11) trusty; urgency=medium

  * lp:~brian-murray/apt-clone/test_clone_upgrade_ports:
    - fix test failure for ppc64el

 -- Brian Murray <brian@ubuntu.com>  Mon, 24 Feb 2014 08:24:54 -0800

apt-clone (0.3.1~ubuntu10) trusty; urgency=low

  [ Brian Murray ]
  * lp:~brian-murray/apt-clone/test_clone_upgrade_ports:
    - fix test failure for armhf
  
  [ Michael Vogt ]
  * fix test failure for ppc64el

 -- Michael Vogt <michael.vogt@ubuntu.com>  Sat, 22 Feb 2014 09:22:02 +0100

apt-clone (0.3.1~ubuntu9) trusty; urgency=medium

  * tests/data/apt-state.tar.gz: remove 'acpi-support' from the test case,
    since this package is arch-specific and we want our tests to work
    consistently across archs.

 -- Steve Langasek <steve.langasek@ubuntu.com>  Thu, 20 Feb 2014 16:57:55 -0800

apt-clone (0.3.1~ubuntu8) trusty; urgency=medium

  * Fix path for setting permissions of restored /etc/apt/sources.list

 -- Brian Murray <brian@ubuntu.com>  Mon, 10 Feb 2014 10:36:19 -0800

apt-clone (0.3.1~ubuntu7) trusty; urgency=low

  * When restoring /etc/apt/sources.list set the permissions to 644.
  * Do not backup hidden files in /etc/apt/sources.list.d/ and only
    back up .list files (LP: #1254447)

 -- Brian Murray <brian@ubuntu.com>  Mon, 10 Feb 2014 08:32:57 -0800

apt-clone (0.3.1~ubuntu6) saucy; urgency=low

  * Properly handle unicode when rewriting source files, thanks to Colin
    Watson for the patch. (LP: #1212025)

 -- Brian Murray <brian@ubuntu.com>  Fri, 06 Sep 2013 14:50:16 -0700

apt-clone (0.3.1~ubuntu5) saucy; urgency=low

  [ Colin Watson ]
  * Avoid using "sudo chown" in tests if all files are already owned by the
    calling user.

  [ Steve Langasek ]